<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingles" />

            <TextView
                android:id="@+id/textEmail"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oral_alto" />

            <TextView
                android:id="@+id/textQue1"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escrito_alto" />

            <TextView
                android:id="@+id/textView7"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingles1" />

            <TextView
                android:id="@+id/TextView03"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingles2" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espanol" />

            <TextView
                android:id="@+id/textView6"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nativo" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQue2"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frances" />

            <TextView
                android:id="@+id/textView4"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oral_bajo" />

            <TextView
                android:id="@+id/textView5"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escrito_medio" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>