<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQue3"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diseno_app" />

            <TextView
                android:id="@+id/textQue4"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diseno_app_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moviles_pda" />

            <TextView
                android:id="@+id/textEmail"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moviles_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aplicaciones_web" />

            <TextView
                android:id="@+id/textView6"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aplicaciones_web_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQue2"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bbdd" />

            <TextView
                android:id="@+id/textView4"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bbdd_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textTelefonoInfo"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssoo" />

            <TextView
                android:id="@+id/TextView03"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssoo_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView07"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ofimatica" />

            <TextView
                android:id="@+id/TextView08"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ofimatica_text" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView10"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edicion_video" />

            <TextView
                android:id="@+id/TextView09"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edicion_video_text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>