<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQue3"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carne1" />

            <TextView
                android:id="@+id/textTelefonoInfo"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carne2" />

            <TextView
                android:id="@+id/textQue4"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carne3" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqui1" />

            <TextView
                android:id="@+id/textQue2"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqui2" />

            <TextView
                android:id="@+id/TextView03"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqui3" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textEmail"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socorrista1" />

            <TextView
                android:id="@+id/textQue1"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socorrista2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socorrista3" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>