<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQue2"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aproximacion" />

            <TextView
                android:id="@+id/textEmail"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android1" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profundidad" />

            <TextView
                android:id="@+id/textQue1"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android2" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView03"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consolidacion" />

            <TextView
                android:id="@+id/textView3"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android3" />
        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textTelefonoInfo"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizacion" />

            <TextView
                android:id="@+id/textView4"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android4" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>