<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_email"
        android:icon="@drawable/ic_action_new_email"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_email"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_info"/>
    
     <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/share"/>

</menu>