<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/af_esqui"
                style="@style/title" />

            <TextView
                android:id="@+id/textTelefonoInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqui_text"
                style="@style/paragraph" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/twitterLogo"
                        android:layout_width="270dp"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/empty_string"
                        android:src="@drawable/esqui" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="270dp"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/empty_string"
                        android:src="@drawable/esqui2" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="270dp"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/empty_string"
                        android:src="@drawable/esqui3" />
                    
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            style="@style/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/af_video"
                style="@style/title" />

            <TextView
                android:id="@+id/textQue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_text"
                style="@style/paragraph" />

            <ImageView
                android:id="@+id/ImageViewVideo"
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/empty_string"
                android:src="@drawable/video1" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>